Fix toggle getting squished in hotkeys UI
https://github.com/xanderfrangos/twinkle-tray/issues/837

--- a/src/css/page.scss
+++ b/src/css/page.scss
@@ -628,6 +628,7 @@ select {
 }
 .feature-toggle-label {
     padding-left: 15px;
+    flex: 1;
     .icon {
         margin-right: 8px
     }
